--- a/flaskr/static/css/tiltometer.css
+++ b/flaskr/static/css/tiltometer.css
@@ -25,6 +25,15 @@
     --color-good-opaque: rgba(23, 162, 184, 0.5);
     --color-carried: rgba(40, 167, 69, 1);
     --color-carried-opaque: rgba(40, 167, 69, 0.5);
+
+    --fat-white-shadow: 2px 0 0 #fff,
+             -2px 0 0 #fff,
+             0 2px 0 #fff,
+             0 -2px 0 #fff,
+             1px 1px #fff,
+             -1px -1px 0 #fff,
+             1px -1px 0 #fff,
+             -1px 1px 0 #fff;
 }
 
 html {
@@ -33,8 +42,9 @@ html {
   font-size: 15pt;
 }
 
-body {
+.sub-body {
   max-width: 1400px;
+  margin: auto;
 }
 
 p {
@@ -68,14 +78,7 @@ p {
     padding: 0.5rem 0;
     width: 100%;
     background-color: #000;
-    text-shadow: 2px 0 0 #fff,
-             -2px 0 0 #fff,
-             0 2px 0 #fff,
-             0 -2px 0 #fff,
-             1px 1px #fff,
-             -1px -1px 0 #fff,
-             1px -1px 0 #fff,
-             -1px 1px 0 #fff;
+    text-shadow: var(--fat-white-shadow);
 }
 
 .header__link {
@@ -342,11 +345,13 @@ select::-ms-expand {
 }
 
 .lds-ripple div {
+  /* border: 4px solid var(--color-patilla); */
+  text-shadow: var(--fat-white-shadow);
+
   position: absolute;
-  border: 4px solid #ff6900;
   opacity: 1;
   border-radius: 50%;
-  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+  animation: lds-ripple 2s cubic-bezier(0, 0.2, 0.8, 1) infinite;
 }
 
 .lds-ripple div:nth-child(2) {
