--- a/flaskr/templates/tiltometer.html
+++ b/flaskr/templates/tiltometer.html
@@ -3,24 +3,18 @@
 {% block title %}tilt-o-stats | {% endblock %}
 
 {% block extra_js %}
-    <script type="text/javascript" src="{{ url_for('static', filename='js/chart.min.js') }}" async></script>
-    <script type="text/javascript">
-        window.onload = function() {
-            drawChart();
-            toggleSpinner();
-        };
-    </script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/gsap/minified/gsap.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/gsap/minified/Draggable.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/speedometer.js') }}" async></script>
 {% endblock %}
 
 {% block content %}
-    <section class="container tilt-container">
-        <input type="hidden" id="tilt-value" name="tilt-value" value="{{ data.tilt_level}}">
-        <div class="tilt-container__chart">
-            <canvas id="tilt-chart"></canvas>
-        </div>
-        <div class="tilt-container__tilt">
-            <p><b>{{ data.summoner_name }}</b> <small>is about</small> {{ data.tilt_level }}% <small>tilted</small></p>
-        </div>
+    <input id="tilt_value" type="hidden" value="{{ data.tilt_level }}">
+    <div class="tilt-container__tilt">
+        <p><b class="orange">{{ data.summoner_name }}</b> <small>is about</small> <span class="orange">{{ data.tilt_level }}%</span> <small>tilted</small></p>
+    </div>
+    <section class="speedometer">
+        {% include "speedometer.html" %}
     </section>
 
     <hr class="separator">
@@ -40,7 +34,6 @@
                     <th>Queue</th>
                     <th colspan="2">Date</th>
                     <th>Performance</th>
-                    {# <th>Tilt</th> #}
                     <th></th>
                 </tr>
             </thead>
@@ -77,7 +70,6 @@
                             <td class="tilt_level tilt_level_4"><span></span></td>
                         {% endif %}
 
-                        {# <td>{{ item.match_tilt }}</td> #}
                         {% if item.win %}
                             <td><img class="win-lose-logo" src="{{ url_for('static', filename='img/victory.png') }}" alt="victory"></td>
                         {% else %}
